--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -27,18 +27,34 @@ body {
   line-height: 1.6;
   overflow-x: hidden;
   position: relative;
+  background: radial-gradient(circle at center, #0f0c29, #302b63, #24243e);
 }
 
-/* Particles Background */
 #particles-js {
-  position: fixed;
+  position: absolute;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   top: 0;
   left: 0;
-  z-index: -1;
+  z-index: -1; 
 }
 
+#particles-js {
+  /* background: radial-gradient(circle at center, #0f0c29, #302b63, #24243e); */
+  animation: fadeIn 2s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+.typed-text{
+  color:#2e5bff;
+  font-weight: bolder;
+  font-size: larger;
+
+}
 /* Typography */
 h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
