--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -27,11 +27,11 @@ body {
   line-height: 1.6;
   overflow-x: hidden;
   position: relative;
-  background: radial-gradient(circle at center, #0f0c29, #302b63, #24243e);
+  /* background: radial-gradient(circle at center, #0f0c29, #302b63, #24243e); */
 }
 
 #particles-js {
-  position: absolute;
+  position: fixed; /* change to absolute if want to*/
   width: 100%;
   height: 100vh;
   top: 0;
@@ -40,7 +40,7 @@ body {
 }
 
 #particles-js {
-  /* background: radial-gradient(circle at center, #0f0c29, #302b63, #24243e); */
+  background: radial-gradient(circle at center, #0f0c29, #302b63, #24243e);
   animation: fadeIn 2s ease-in-out;
 }
 
