--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -410,10 +410,27 @@ section {
   border: none;
 }
 
+.exp-header{
+  background: #000;
+  height: auto;
+  border: 1px solid #000;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.exp-header h3{
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
 .experience-card {
   background: rgba(30, 30, 30, 0.6);
   border-radius: 10px;
   padding: 20px;
+}
+
+.experience-card p{
+  margin-top: 10px;
 }
 
 .experience-card h3{
