Added more thoughts in the thought section.

--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -828,6 +828,9 @@ body.light-mode .skill-bar {
   animation: float 6s ease-in-out infinite;
 }
 
+.thoughts{
+  height: 70vh;
+}
 .thought-list {
   display: flex;
   flex-direction: row;
