added the card functionality to the experience card

--- a/style.css
+++ b/style.css
@@ -393,16 +393,9 @@ section {
 }
 
 .exp-header{
-  background: #000;
   height: auto;
-  border: 1px solid #000;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-}
-
-.exp-header h3{
-  padding-top: 10px;
-  padding-left: 10px;
 }
 
 .experience-card {
@@ -412,6 +405,7 @@ section {
   border: 1px solid rgba(108, 99, 255, 0.2);
   transition: var(--transition);
   width: 100%;
+  cursor: pointer; 
 }
 
 .experience-card:hover{
@@ -454,6 +448,57 @@ section {
   display: flex;
   gap: 1rem;
   margin-top: 2rem;
+}
+
+
+/* Smooth collapse/expand animation
+.exp-details {
+  max-height: 0;
+  opacity: 0;
+  overflow: hidden;
+  transition: all 0.4s ease-in-out;
+}
+
+/* When card is active */
+/* .experience-card.active .exp-details {
+  max-height: 800px; 
+  opacity: 1;
+} */
+
+/*.exp-header::after{
+  content: '+';
+  margin-right: 10px;
+  font-weight: 600;
+  font-size: 24px;
+  position: relative;
+  left: 60%;
+  right: auto;
+} */
+
+/* Hide details initially */
+.exp-details {
+  max-height: 0;
+  opacity: 0;
+  overflow: hidden;
+  transition: all 0.4s ease;
+}
+
+.experience-card.active .exp-details {
+  max-height: 800px;
+  opacity: 1;
+
+}
+
+.experience-card.active {
+  border-color: #6c63ff;
+  box-shadow: 0 0 15px rgba(108, 99, 255, 0.4);
+}
+
+@media (max-width: 768px){
+  .experience-card h3{
+    font-size: 5vw;
+    font-weight: 600;
+  }
 }
 
 /* Contact Section */
@@ -817,6 +862,7 @@ footer p {
   text-wrap: wrap;
   font-size: 1rem;
   margin: 0;
+  padding-inline: 20px;
 }
 
 .thought-card p > span{
@@ -850,7 +896,7 @@ footer p {
     grid-auto-flow: row;
     grid-auto-columns: unset;
     grid-auto-rows: unset;
-    height: auto;
+    height: 200px;
     width: 90%;
     margin: 0 auto;
     position: sticky;
@@ -871,5 +917,12 @@ footer p {
   .thought-card p > span{
   font-size: x-large;
   padding: 5px;
+  }
+
+  .thought-card:nth-child(odd) {
+    transform: rotate(-1deg);
+  }
+  .thought-card:nth-child(even) {
+    transform: rotate(1deg);
   }
 }
