--- a/style.css
+++ b/style.css
@@ -156,21 +156,24 @@ nav a:hover::after {
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    /* background: linear-gradient(to left, var(--primary), var(--accent)); */
     
   }
 
   .mobile-menu-btn {
     display: block;
-    padding-right: 10px;
+    margin-right: 10px;
   }
 
   nav ul {
     position: fixed;
     top: 70px;
-    left: -100%;
+    right: -100%;
     width: 100%;
     height: calc(100vh - 70px);
     background: var(--light-dark);
+    /* background: rgba(18, 18, 18, 0.9);
+    backdrop-filter: blur(10px); */
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
@@ -179,7 +182,7 @@ nav a:hover::after {
   }
 
   nav ul.active {
-    left: 0;
+    right: 0;
   }
 
   nav li {
@@ -409,7 +412,7 @@ section {
 }
 
 .experience-card:hover{
-    transform: translateY(-5px);
+  transform: translateY(-5px);
   box-shadow: 0 10px 20px rgba(0, 242, 254, 0.1);
   border-color: var(--accent);
 }
@@ -450,7 +453,6 @@ section {
   margin-top: 2rem;
 }
 
-
 /* Smooth collapse/expand animation
 .exp-details {
   max-height: 0;
@@ -475,18 +477,22 @@ section {
   right: auto;
 } */
 
-/* Hide details initially */
-.exp-details {
+@media (max-width: 768px){
+  .experience-card h3{
+    font-size: 5vw;
+    font-weight: 600;
+  }
+
+  .exp-details {
   max-height: 0;
   opacity: 0;
-  overflow: hidden;
+  overflow: visible;
   transition: all 0.4s ease;
 }
 
 .experience-card.active .exp-details {
   max-height: 800px;
   opacity: 1;
-
 }
 
 .experience-card.active {
@@ -494,11 +500,6 @@ section {
   box-shadow: 0 0 15px rgba(108, 99, 255, 0.4);
 }
 
-@media (max-width: 768px){
-  .experience-card h3{
-    font-size: 5vw;
-    font-weight: 600;
-  }
 }
 
 /* Contact Section */
